# oxc-css-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  release-plz.toml
benchmark/: Cargo.toml
benchmark/benches/: self.rs
crates/oxc_css_parser/: CHANGELOG.md  Cargo.toml
crates/oxc_css_parser/examples/: json.rs  print_ast.rs
crates/oxc_css_parser/src/: ast.rs  ast_generated.rs  config.rs  error.rs  lib.rs  pos.rs  span_ignored_eq.rs  util.rs
crates/oxc_css_parser/src/parser/: builder.rs  convert.rs  less.rs  macros.rs  mod.rs  postcss_simple_vars.rs  sass.rs  selector.rs  state.rs  stmt.rs  token_seq.rs  value.rs
crates/oxc_css_parser/src/parser/at_rule/: color_profile.rs  container.rs  counter_style.rs  custom_media.rs  custom_selector.rs  document.rs  font_feature_values.rs  import.rs  keyframes.rs  layer.rs  media.rs  mod.rs  namespace.rs  page.rs  scope.rs  supports.rs
crates/oxc_css_parser/src/tokenizer/: misc.rs  mod.rs  symbol.rs  token.rs  token_generated.rs
crates/oxc_css_parser/tests/: ast.rs  css_placeholder_selector.rs  error.rs  import_prelude.rs  number_trailing_dot.rs  placeholder.rs  recoverable.rs  scss_dotted_words.rs  simple_vars.rs
crates/oxc_css_parser/tests/ast/at-rule/: color-profile.css  container.css  container.snap  css-custom-function-interp.scss  css-custom-function.css  custom-selector.snap  document-matchers.css  document.snap  font-feature-values.snap  import-nested.css  keyframes-loose.css  keyframes.css  keyframes.snap  layer.snap  media-general-enclosed.css  media-general-enclosed.snap  media-string-template.scss  media.snap  namespace.snap  page.css  page.snap  scope-empty.css  scope.snap  starting-style.snap  supports-general-enclosed.css  supports-general-enclosed.snap  supports-ie-star-general-enclosed.css  supports-ie-star-general-enclosed.snap  supports-interpolation.scss  supports.snap  unknown.snap
crates/oxc_css_parser/tests/ast/comment/: basic.snap
crates/oxc_css_parser/tests/ast/declaration/: basic.snap  custom-property.snap  empty-values.snap  escaped.snap  ie-star-hack.css  ie-star-hack.snap  important.snap
crates/oxc_css_parser/tests/ast/less/: at-rules-lenient.less  comment.snap  css-guard.snap  detached-ruleset.snap  guards-lenient.less  ie-star-hack.less  ie-star-hack.snap  interpolation.snap  merge-property.snap  misc-lenient.less  namespace.snap  permissive-variable-value.less
crates/oxc_css_parser/tests/ast/misc/: bom.snap  cdo_cdc.snap
crates/oxc_css_parser/tests/ast/qualified-rule/: empty-selector.css  nesting.snap
crates/oxc_css_parser/tests/ast/sass/: basic.snap  extend.snap  functions.snap  indent-with-spaces.snap  indent-with-tabs.snap  issue-13.snap  keyframes.snap  leading-empty-line.snap  line-comment.snap  list.snap  map.snap  multiline-params.sass  semicolon.sass
crates/oxc_css_parser/tests/ast/scss/: env.snap  interpolation.snap  selector-length.snap  variables.snap
crates/oxc_css_parser/tests/ast/selectors/: an_plus_b.snap  any-slotted-lists.css  attribute_selector.css  attribute_selector.snap  class_selector.snap  comments.snap  complex_selector.snap  compound_selector.snap  escaped.snap  id_selector.snap  nesting.snap  pseudo_class_selector.css  pseudo_class_selector.snap  pseudo_element_selector.css  pseudo_element_selector.snap  selector_list.snap  type_selector.snap
crates/oxc_css_parser/tests/ast/tailwindcss/: namespace.snap
crates/oxc_css_parser/tests/ast/value/: bracket.snap  calc.snap  dimension.snap  function.snap  hex.snap  ie.snap  mix.snap  number.snap  percentage.snap  string.snap  urange.css  urange.snap  url.snap
crates/oxc_css_parser/tests/error/at-rule/: at-digit.snap  at-hyphen.css  at-hyphen.snap  container-style-ie-star.css  container-style-ie-star.snap
crates/oxc_css_parser_macro/: Cargo.toml  README.md
crates/oxc_css_parser_macro/src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
(+668 files in other folders)
