[package]
name = "oxc-css-parser-benchmark"
version = "0.0.1"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
license = "MIT"
publish = false

[dependencies]
oxc-css-parser = { path = "../crates/oxc_css_parser" }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "self"
harness = false
