[package]
name = "oxc-css-parser-benchmark"
version = "0.0.1"
edition = "2024"
authors = []
license = "MIT"
publish = false

[dependencies]
oxc-css-parser = { path = "../crates/oxc_css_parser" }

[features]
default = []
codspeed = ["criterion2/codspeed"]

[dev-dependencies]
criterion2 = { version = "3", default-features = false }

[[bench]]
name = "self"
harness = false
