[package]
name = "oxc-css-parser-wasm"
version = "0.0.1"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "WebAssembly build of oxc-css-parser."
repository = "https://github.com/oxc-project/oxc-css"
license = "MIT"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = "1.0"
serde-wasm-bindgen = "0.6"
oxc-css-parser = { path = "../crates/oxc_css_parser", features = ["config_serde", "serialize"] }
wasm-bindgen = "0.2"
