[package]
name = "oxc-css-parser"
version = "0.0.3"
edition = "2024"
authors = []
description = "Parser for CSS, SCSS, Sass, and Less."
repository = "https://github.com/oxc-project/oxc-css-parser"
license = "MIT"
exclude = ["/tests"]

[dependencies]
oxc_allocator = ">=0.137.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
codespan-reporting = "0.13"
criterion2 = { version = "3", default-features = false }
insta = { version = "1.47", features = ["glob", "ron"] }
serde_json = "1.0"

[features]
default = []
codspeed = ["criterion2/codspeed"]
config_serde = ["serde"]
serialize = ["serde", "oxc_allocator/serialize"]
span_ignored_eq = []
variant_helpers = []

[[bench]]
name = "self"
path = "../../benches/self.rs"
harness = false

[[example]]
name = "comments"
path = "../../examples/comments.rs"

[[example]]
name = "json"
path = "../../examples/json.rs"

[[example]]
name = "print_ast"
path = "../../examples/print_ast.rs"
