[package]
name = "oxc-css-parser-macro"
version = "0.0.1"
edition = "2024"
authors = ["Pig Fang <g-plane@hotmail.com>"]
description = "Macros for oxc-css-parser."
repository = "https://github.com/oxc-project/oxc-css"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
quote = "1.0"
syn = "2.0"
